# mailling_service

./: .gitignore  README.md  constants.py  pyproject.toml
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_initial.py  0003_alter_blogpost_options.py  0004_alter_blogpost_author.py
blog/templates/blog/: blogpost_confirm_delete.html  blogpost_detail.html  blogpost_form.html  blogpost_list.html
blog/templatetags/: custom_filters.py
config/: settings.py  urls.py
core/: services.py  urls.py  views.py
core/templates/core/: base.html  contacts.html  home_guest.html  index.html
mailing/: admin.py  cron.py  forms.py  services.py  urls.py
mailing/migrations/: 0001_initial.py  0002_initial.py  0003_rename_log_mailinglog.py  0004_client_user_mailingsettings_is_active_and_more.py
mailing/models/: client.py  mailing.py  mailing_log.py
mailing/templates/mailing/: client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  mailinglog_list.html  mailingsettings_confirm_delete.html  mailingsettings_detail.html  mailingsettings_form.html  mailingsettings_list.html
mailing/views/: client.py  mailing.py  mailing_log.py
static/js/: bootstrap.bundle.js  bootstrap.esm.js  bootstrap.js
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: content_manager.py  csu.py  managers_group.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py
users/templates/users/: login.html  register.html  user_form.html  verification_failure.html
